added session managment code and some bugs fixes